Fix #12 reset button stuck on failed form validation and add spacing to all assets link

--- a/inventory/static/assets.css
+++ b/inventory/static/assets.css
@@ -40,7 +40,7 @@ body {
 .links>a {
 	text-decoration: none;
 	color: whitesmoke;
-	width: 7em;
+	width: 8em;
 	margin-right: 4px;
 }
 
@@ -55,7 +55,7 @@ body {
 
 .login {
 	background-color: #734C11;
-	margin-left: -67px;
+	margin-left: -79px;
 	padding-left: 32px;
 }
 
